# chara

./: .gitignore  Cargo.toml  README.md  bootes.json
app/: biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/src/: App.tsx  main.tsx  routeTree.gen.ts
app/src/assets/: graph.json
app/src/core/: Sidebar.tsx
app/src/routes/: __root.tsx  index.lazy.tsx
app/src/routes/definition/: index.lazy.tsx
app/src/routes/definitions/: index.lazy.tsx
app/src/routes/graph/: index.lazy.tsx
app/src/shared/catalyst/: alert.tsx  avatar.tsx  (+18 more)
app/src/store/: store.ts
bruno/chara_api/: Get definition by id.bru  List definitions.bru  bruno.json  test.bru
bruno/chara_api/environments/: local.bru
chara/: Cargo.toml  README.md  chara.json
chara/api/: Cargo.toml
chara/api/src/: main.rs
chara/app/: Cargo.toml  chara.json
chara/app/src/: main.rs
chara/app/src/engine/: contexts_dto.rs
chara/app/src/parser/: chara_dto.rs
chara/app/src/types/: mod.rs
chara/cli/: Cargo.toml
chara/cli/src/: main.rs
chara/libs/common/: Cargo.toml
chara/libs/common/src/: collection.rs  lib.rs  merge.rs  thread.rs
chara/libs/definitions/: Cargo.toml
chara/libs/definitions/src/: cli.rs  definition.rs  definitions.rs  from_definition.rs  lib.rs  map.rs  to_definition.rs
chara/libs/definitions/src/dto/: definition_info.rs  mod.rs
chara/libs/definitions/src/mappers/: arguments.rs  environments.rs  from_definition.rs  mod.rs  processors.rs  tags.rs  to_definition.rs
chara/libs/definitions/src/mappers/definition_dto/: from_definition.rs  from_draft_definition.rs  mod.rs  to_definition.rs  to_draft_definition.rs
chara/libs/definitions/tests/: from_definition_test.rs
chara/libs/definitions/tests/definitions/: chara.json
chara/libs/engine/: Cargo.toml
chara/libs/engine/src/: cli.rs  contexts.rs  contexts_dto.rs  definition.rs  definition_test.rs  errors.rs  lib.rs  processor.rs  reference_value.rs
chara/libs/engine/src/clean/: clean_definition.rs  mod.rs
chara/libs/engine/src/definition/: definition.rs  edge.rs  finders.rs  foreign_definition.rs  input.rs  install.rs  merge_definitions.rs  metadata.rs  mod.rs  tag.rs
chara/libs/engine/src/draft/: draft_definition.rs  mod.rs
chara/libs/engine/tests/: finders_tests.rs
chara/libs/engine/tests/common/: definition.rs  edge.rs  edge_override.rs  metadata.rs  mod.rs  processor.rs
chara/libs/graph/: Cargo.toml
chara/libs/graph/src/: from_definition.rs  graph.rs  lib.rs
chara/libs/types/: Cargo.toml
chara/libs/types/src/: lib.rs  thread.rs
examples/: chara-github-scrapper.2024-11-07.private-key.pem  chara.json
examples/.github/workflows/: build-workflow.yaml
scrappers/: Cargo.toml
scrappers/github/: Cargo.toml
scrappers/github/src/: context.rs  dtos.rs  errors.rs  github.rs  main.rs  workflow.rs
scrappers/http/: Cargo.toml
scrappers/http/src/: main.rs
scrappers/reusable_worklow/: Cargo.toml
src/: main.rs
src/engine/: bootes.rs  bootes_test.rs  chara.rs  chara_test.rs  cli.rs  contexts.rs  contexts_dto.rs  mod.rs
src/parser/: bootes_dto.rs  finders.rs  map.rs  mod.rs
src/types/: collection.rs  input.rs  thread.rs
(+41 files in other folders)
