[workspace]
members = [
    "cli",
    "api",
    "libs/engine",
    "libs/definitions",
    "libs/common",
    "libs/graph",
]

[workspace.dependencies]
definitions = { path = "libs/definitions" }
engine = { path = "libs/engine" }
graph = { path = "libs/graph" }
common = { path = "libs/common" }

rocket = "0.5.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.128"
map-macro = "0.3.0"
thiserror = "1.0.66"
log = "0.4.22"
colog = "1.3.0"
uuid = { version = "1.11.0", features = ["v4"] }
