[workspace]
members = ["http", "github"]

[workspace.dependencies]
definitions = { path = "../chara/libs/definitions" }

clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
octocrab = "0.41.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.66"
log = "0.4.22"
colog = "1.3.0"
