[package]
name = "octokit"
version = "0.1.0"
edition = "2021"

[dependencies]
definitions = { workspace = true }

tokio = { workspace = true }
octocrab = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror={workspace = true}
log={workspace = true}
colog={workspace = true}