[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
definitions={path="../../chara/libs/definitions"}
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
